--- a/public/style.css
+++ b/public/style.css
@@ -1,55 +1,85 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  display: flex;
+    width: 100vw;
+    background-color: #fbede9;
+    font-family: sans-serif;
+    text-transform: uppercase;
+}
+
+h1 {
+    text-align: center;
+    color: #FA6A72;
+    font-size: 4rem;
+    padding: 2rem;
+}
+
+.end-game {
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.end-game button {
+    border: none;
+    font-size: 2rem;
+    text-transform: uppercase;
+    background-color: #FA6A72;
+    color: #ffffff;
+    padding: 1rem;
+    border-radius: 10px;
+    display: none;
+}
+
+.end-game .visible {
+    display: inline-block;
 }
 
 .memory-game {
-  width: 640px;
-  height: 640px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  perspective: 1000px;
-  user-select: none;
+    width: 640px;
+    height: 640px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    perspective: 1000px;
+    user-select: none;
 }
 
 .memory-card {
-  width: calc(25% - 10px);
-  height: calc(33.333% - 10px);
-  margin: 5px;
-  position: relative;
-  transform: scale(1);
-  transform-style: preserve-3d;
-  transition: transform .5s;
-  box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    margin: 5px;
+    position: relative;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .memory-card:active {
-  transform: scale(0.97);
-  transition: transform .2s;
+    transform: scale(0.97);
+    transition: transform 0.2s;
 }
 
 .memory-card.flip {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .front-face,
 .back-face {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  position: absolute;
-  border-radius: 5px;
-  background: tomato;
-  backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    backface-visibility: hidden;
+    background-color: #3d5287;
 }
 
 .front-face {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    background-color: #fa6a72;
 }
