--- a/public/style.css
+++ b/public/style.css
@@ -56,17 +56,23 @@ h1 {
     margin: 5px;
     position: relative;
     transform: scale(1);
+    -webkit-transform: scale(1);
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     transition: transform 0.3s;
+    -webkit-transition: transform 0.3s;
+
 }
 
 .memory-card:active {
     transform: scale(0.97);
     transition: transform 0.2s;
+    -webkit-transition: transform 0.2s;
 }
 
 .memory-card.flip {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .front-face,
@@ -77,11 +83,13 @@ h1 {
     position: absolute;
     border-radius: 5px;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background-color: #3d5287;
 }
 
 .front-face {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     background-color: #fa6a72;
 }
 
@@ -89,7 +97,7 @@ h1 {
 
     h1 {
         font-size: 3rem;
-        padding: 0.5rem 0 0 0;
+        padding: 0.5rem 0.5rem 0 0.5rem;
     }
 
     .memory-game {
