--- a/public/style.css
+++ b/public/style.css
@@ -96,8 +96,8 @@ h1 {
 @media (max-width: 576px) {
 
     h1 {
-        font-size: 3rem;
-        padding: 0.5rem 0.5rem 0 0.5rem;
+        font-size: 2.5rem;
+        padding: 0.5rem 0 0 0.5rem;
     }
 
     .memory-game {
