--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ h1 {
     color: #ffffff;
     padding: 1rem;
     border-radius: 10px;
-
+    display: none;
 }
 
 .end-game .visible {
@@ -61,7 +61,6 @@ h1 {
     -webkit-transform-style: preserve-3d;
     transition: transform 0.3s;
     -webkit-transition: transform 0.3s;
-
 }
 
 .memory-card:active {
