--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@ h1 {
     border: none;
     font-size: 2rem;
     text-transform: uppercase;
-    background-color: #FA6A72;
+    background-color: #3d5287;
     color: #ffffff;
     padding: 1rem;
     border-radius: 10px;
