--- a/public/style.css
+++ b/public/style.css
@@ -104,8 +104,12 @@ p {
 @media (max-width: 576px) {
 
     h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
         padding: 0.5rem 0 0 0.5rem;
+    }
+
+    p {
+        font-size: 1.2rem;
     }
 
     .memory-game {
@@ -115,6 +119,7 @@ p {
 
     .end-game {
         padding: 0.5rem 0;
+        width: 100%;
     }
 
     .end-game button {
