--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,7 @@ p {
     color: #ffffff;
     padding: 1rem;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .memory-game {
@@ -70,12 +71,13 @@ p {
     -webkit-transform-style: preserve-3d;
     transition: transform 0.3s;
     -webkit-transition: transform 0.3s;
+    cursor: pointer;
 }
 
 .memory-card:active {
     transform: scale(0.97);
-    transition: transform 0.2s;
-    -webkit-transition: transform 0.2s;
+    transition: transform 0.3s;
+    -webkit-transition: transform 0.3s;
 }
 
 .memory-card.flip {
@@ -100,6 +102,25 @@ p {
     -webkit-transform: rotateY(180deg);
     background-color: #fa6a72;
 }
+
+.animate {
+    animation: shake 0.5s;
+    animation-iteration-count: 3;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 @media (max-width: 576px) {
 
