--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap");
 
 * {
     padding: 0;
@@ -9,15 +9,15 @@
 body {
     width: 100vw;
     background-color: #fbede9;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: "IBM Plex Mono", monospace;
     text-transform: uppercase;
 }
 
 h1 {
     text-align: center;
     color: #3d5287;
-    font-size: 4rem;
-    padding: 2rem;
+    font-size: 5rem;
+    padding: 1rem;
 }
 
 h1 span {
@@ -31,11 +31,11 @@ p {
 
 .end-game {
     text-align: center;
-    padding-bottom: 2rem;
+    padding-bottom: 3rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 70%;
+    width: 40%;
     margin: auto;
 }
 
@@ -44,15 +44,21 @@ p {
     font-size: 2rem;
     text-transform: uppercase;
     background-color: #3d5287;
-    color: #ffffff;
+    color: #fbede9;
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
+    outline: none;
+}
+
+
+.end-game button:active {
+    transform: translateY(3px);
 }
 
 .memory-game {
-    width: 50vw;
-    height: 70vh;
+    width: 40rem;
+    height: 45rem;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -109,21 +115,42 @@ p {
 }
 
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
 
-@media (max-width: 576px) {
-
+@media (max-width: 630px) {
     h1 {
         font-size: 2rem;
         padding: 0.5rem 0 0 0.5rem;
@@ -148,4 +175,4 @@ p {
         font-size: 1rem;
         padding: 0.5rem;
     }
- }
+}
