--- a/public/style.css
+++ b/public/style.css
@@ -29,17 +29,7 @@ p {
     font-size: 2rem;
 }
 
-.end-game {
-    text-align: center;
-    padding-bottom: 3rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 40%;
-    margin: auto;
-}
-
-.end-game button {
+button {
     border: none;
     font-size: 2rem;
     text-transform: uppercase;
@@ -51,6 +41,56 @@ p {
     outline: none;
 }
 
+.overlay {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .overlay div {
+      display: flex;
+      flex-direction: column;
+      background-color: #fbede9;
+      height: 70vh;
+      width: 60vw;
+      text-align: center;
+  }
+
+  .overlay div h2 {
+      font-size: 3rem;
+      padding: 4rem;
+  }
+
+.overlay-buttons {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+}
+
+.overlay-buttons button {
+    margin-top: 4rem;
+    width: 60%;
+}
+
+.end-game {
+    text-align: center;
+    padding-bottom: 3rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 40%;
+    margin: auto;
+}
 
 .end-game button:active {
     transform: translateY(3px);
