--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ button {
 
 .overlay {
     position: fixed;
-    display: flex;
+    display: none;
     width: 100%;
     height: 100%;
     top: 0;
@@ -217,3 +217,5 @@ button {
         padding: 0.5rem;
     }
 }
+
+
