--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ button {
 
 .overlay {
     position: fixed;
-    display: none;
+    display: flex;
     width: 100%;
     height: 100%;
     top: 0;
