--- a/public/style.css
+++ b/public/style.css
@@ -50,25 +50,25 @@ button {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  .overlay div {
-      display: flex;
-      flex-direction: column;
-      background-color: #fbede9;
-      height: 70vh;
-      width: 60vw;
-      text-align: center;
-  }
+.overlay div {
+    display: flex;
+    flex-direction: column;
+    background-color: #fbede9;
+    height: 70vh;
+    width: 60vw;
+    text-align: center;
+}
 
-  .overlay div h2 {
-      font-size: 3rem;
-      padding: 4rem;
-  }
+.overlay div h2 {
+    font-size: 3rem;
+    padding: 4rem;
+}
 
 .overlay-buttons {
     display: flex;
@@ -201,6 +201,21 @@ button {
         font-size: 1.2rem;
     }
 
+    .overlay div {
+        height: 70vh;
+        width: 90vw;
+    }
+
+    .overlay div h2 {
+        font-size: 3rem;
+        padding: 4rem 4rem 0 4rem;
+    }
+
+    .overlay-buttons button {
+        margin: 1.2rem 0;
+        width: 65%;
+    }
+
     .memory-game {
         width: 95vw;
         height: 82vh;
@@ -217,5 +232,3 @@ button {
         padding: 0.5rem;
     }
 }
-
-
