--- a/public/style.css
+++ b/public/style.css
@@ -202,7 +202,7 @@ button {
     }
 
     .overlay div {
-        height: 70vh;
+        height: 90vh;
         width: 90vw;
     }
 
@@ -212,8 +212,9 @@ button {
     }
 
     .overlay-buttons button {
-        margin: 1.2rem 0;
+        margin: 3rem 0 0 0;
         width: 65%;
+        padding: 1rem;
     }
 
     .memory-game {
