--- a/public/style.css
+++ b/public/style.css
@@ -214,7 +214,8 @@ button {
     .overlay-buttons button {
         margin: 3rem 0 0 0;
         width: 65%;
-        padding: 1rem;
+        font-size: 1.5rem;
+        padding: 0.5rem;
     }
 
     .memory-game {
