--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ button {
 }
 
 
-.conatiner {
+.container {
     max-width: 635px;
     margin: auto;
 }
@@ -116,7 +116,7 @@ button {
     align-content: flex-start;
     flex-wrap: wrap;
     perspective: 1000px;
-    user-select: none;
+    /* user-select: none; */
 }
 
 .memory-card {
@@ -133,6 +133,8 @@ button {
     cursor: pointer;
 }
 
+
+
 .memory-card:active {
     transform: scale(0.97);
     transition: transform 0.3s;
@@ -148,7 +150,7 @@ button {
 .back-face {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 10px;
     position: absolute;
     border-radius: 5px;
     backface-visibility: hidden;
@@ -233,6 +235,12 @@ button {
     .memory-game {
         width: 95vw;
         height: 82vh;
+    }
+
+    .memory-card.hard {
+        width: calc(20% - 5px);
+        height: calc(16.5% - 5px);
+        margin: 2.5px;
     }
 
     .end-game {
