--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -41,7 +41,6 @@ button {
     outline: none;
 }
 
-
 .container {
     max-width: 1070px;
     margin: auto;
@@ -61,11 +60,11 @@ button {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .overlay div {
@@ -74,8 +73,8 @@ button {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     background-color: #fbede9;
     height: 70vh;
     width: 60vw;
@@ -84,7 +83,7 @@ button {
 
 .overlay div h2 {
     font-size: 3rem;
-    padding: 4rem;
+    padding: 4rem 0 2rem 0;
 }
 
 .overlay-buttons {
@@ -93,12 +92,12 @@ button {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     height: 100%;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .overlay-buttons button {
@@ -113,19 +112,19 @@ button {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     width: 100%;
     margin: auto;
 }
 
 .end-game button:active {
     -webkit-transform: translateY(3px);
-        -ms-transform: translateY(3px);
-            transform: translateY(3px);
+    -ms-transform: translateY(3px);
+    transform: translateY(3px);
 }
 
 .end-game .pairs {
@@ -137,21 +136,21 @@ button {
 
 .memory-game {
     width: 70rem;
-    height: 30rem;
+    height: 27rem;
     margin: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-line-pack: start;
-        align-content: flex-start;
+    align-content: flex-start;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-perspective: 1000px;
-            perspective: 1000px;
+    perspective: 1000px;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .memory-card {
@@ -160,7 +159,7 @@ button {
     margin: 5px;
     position: relative;
     -ms-transform: scale(1);
-        transform: scale(1);
+    transform: scale(1);
     -webkit-transform: scale(1);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
@@ -179,7 +178,7 @@ button {
     margin: 5px;
     position: relative;
     -ms-transform: scale(1);
-        transform: scale(1);
+    transform: scale(1);
     -webkit-transform: scale(1);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
@@ -192,12 +191,10 @@ button {
     cursor: pointer;
 }
 
-
-
 .memory-card:active {
     -webkit-transform: scale(0.97);
-        -ms-transform: scale(0.97);
-            transform: scale(0.97);
+    -ms-transform: scale(0.97);
+    transform: scale(0.97);
     -webkit-transition: -webkit-transform 0.3s;
     transition: -webkit-transform 0.3s;
     -o-transition: transform 0.3s;
@@ -231,102 +228,102 @@ button {
 
 .animate {
     -webkit-animation: shake 0.5s;
-            animation: shake 0.5s;
+    animation: shake 0.5s;
     -webkit-animation-iteration-count: 3;
-            animation-iteration-count: 3;
+    animation-iteration-count: 3;
 }
 
 @-webkit-keyframes shake {
     0% {
         -webkit-transform: translate(1px, 1px) rotate(0deg);
-                transform: translate(1px, 1px) rotate(0deg);
+        transform: translate(1px, 1px) rotate(0deg);
     }
     10% {
         -webkit-transform: translate(-1px, -2px) rotate(-1deg);
-                transform: translate(-1px, -2px) rotate(-1deg);
+        transform: translate(-1px, -2px) rotate(-1deg);
     }
     20% {
         -webkit-transform: translate(-3px, 0px) rotate(1deg);
-                transform: translate(-3px, 0px) rotate(1deg);
+        transform: translate(-3px, 0px) rotate(1deg);
     }
     30% {
         -webkit-transform: translate(3px, 2px) rotate(0deg);
-                transform: translate(3px, 2px) rotate(0deg);
+        transform: translate(3px, 2px) rotate(0deg);
     }
     40% {
         -webkit-transform: translate(1px, -1px) rotate(1deg);
-                transform: translate(1px, -1px) rotate(1deg);
+        transform: translate(1px, -1px) rotate(1deg);
     }
     50% {
         -webkit-transform: translate(-1px, 2px) rotate(-1deg);
-                transform: translate(-1px, 2px) rotate(-1deg);
+        transform: translate(-1px, 2px) rotate(-1deg);
     }
     60% {
         -webkit-transform: translate(-3px, 1px) rotate(0deg);
-                transform: translate(-3px, 1px) rotate(0deg);
+        transform: translate(-3px, 1px) rotate(0deg);
     }
     70% {
         -webkit-transform: translate(3px, 1px) rotate(-1deg);
-                transform: translate(3px, 1px) rotate(-1deg);
+        transform: translate(3px, 1px) rotate(-1deg);
     }
     80% {
         -webkit-transform: translate(-1px, -1px) rotate(1deg);
-                transform: translate(-1px, -1px) rotate(1deg);
+        transform: translate(-1px, -1px) rotate(1deg);
     }
     90% {
         -webkit-transform: translate(1px, 2px) rotate(0deg);
-                transform: translate(1px, 2px) rotate(0deg);
+        transform: translate(1px, 2px) rotate(0deg);
     }
     100% {
         -webkit-transform: translate(1px, -2px) rotate(-1deg);
-                transform: translate(1px, -2px) rotate(-1deg);
+        transform: translate(1px, -2px) rotate(-1deg);
     }
 }
 
 @keyframes shake {
     0% {
         -webkit-transform: translate(1px, 1px) rotate(0deg);
-                transform: translate(1px, 1px) rotate(0deg);
+        transform: translate(1px, 1px) rotate(0deg);
     }
     10% {
         -webkit-transform: translate(-1px, -2px) rotate(-1deg);
-                transform: translate(-1px, -2px) rotate(-1deg);
+        transform: translate(-1px, -2px) rotate(-1deg);
     }
     20% {
         -webkit-transform: translate(-3px, 0px) rotate(1deg);
-                transform: translate(-3px, 0px) rotate(1deg);
+        transform: translate(-3px, 0px) rotate(1deg);
     }
     30% {
         -webkit-transform: translate(3px, 2px) rotate(0deg);
-                transform: translate(3px, 2px) rotate(0deg);
+        transform: translate(3px, 2px) rotate(0deg);
     }
     40% {
         -webkit-transform: translate(1px, -1px) rotate(1deg);
-                transform: translate(1px, -1px) rotate(1deg);
+        transform: translate(1px, -1px) rotate(1deg);
     }
     50% {
         -webkit-transform: translate(-1px, 2px) rotate(-1deg);
-                transform: translate(-1px, 2px) rotate(-1deg);
+        transform: translate(-1px, 2px) rotate(-1deg);
     }
     60% {
         -webkit-transform: translate(-3px, 1px) rotate(0deg);
-                transform: translate(-3px, 1px) rotate(0deg);
+        transform: translate(-3px, 1px) rotate(0deg);
     }
     70% {
         -webkit-transform: translate(3px, 1px) rotate(-1deg);
-                transform: translate(3px, 1px) rotate(-1deg);
+        transform: translate(3px, 1px) rotate(-1deg);
     }
     80% {
         -webkit-transform: translate(-1px, -1px) rotate(1deg);
-                transform: translate(-1px, -1px) rotate(1deg);
+        transform: translate(-1px, -1px) rotate(1deg);
     }
     90% {
         -webkit-transform: translate(1px, 2px) rotate(0deg);
-                transform: translate(1px, 2px) rotate(0deg);
+        transform: translate(1px, 2px) rotate(0deg);
     }
     100% {
         -webkit-transform: translate(1px, -2px) rotate(-1deg);
-                transform: translate(1px, -2px) rotate(-1deg);
+        transform: translate(1px, -2px) rotate(-1deg);
     }
 }
 
@@ -347,7 +344,6 @@ button {
 
     .overlay div h2 {
         font-size: 3rem;
-        padding: 4rem 4rem 0 4rem;
     }
 
     .overlay-buttons button {
@@ -377,8 +373,8 @@ button {
     .end-game {
         padding: 0.5rem;
         -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
     }
 
     .end-game button {
