--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap');
 
 * {
     padding: 0;
@@ -9,7 +9,7 @@
 body {
     width: 100vw;
     background-color: #fbede9;
-    font-family: "IBM Plex Mono", monospace;
+    font-family: 'IBM Plex Mono', monospace;
     text-transform: uppercase;
 }
 
@@ -64,8 +64,8 @@ button {
     display: flex;
     flex-direction: column;
     background-color: #fbede9;
-    height: 70vh;
-    width: 60vw;
+    height: 40rem;
+    width: 40rem;
     text-align: center;
 }
 
@@ -252,8 +252,8 @@ button {
     }
 
     .overlay div {
-        height: 90vh;
-        width: 90vw;
+        height: 35rem;
+        width: 20rem;
     }
 
     .overlay div h2 {
